// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchComponent should render default view 1`] = `
<React.Fragment>
  <SimpleSearchComponent
    isInHeader={false}
    onInvalidSearch={[Function]}
    onSearch={[Function]}
    onToggle={[Function]}
    searchQueryParams={Object {}}
    showAdvancedSearchButton={false}
    showMobileSearchButton={false}
    showPrefixIcon={false}
    showSearchButton={false}
  />
  <Snackbar
    autoHideDuration={5000}
    message=""
    open={false}
  />
</React.Fragment>
`;

exports[`SearchComponent should render default view with advanced search 1`] = `
<React.Fragment>
  <AdvancedSearchComponent
    isAdvancedSearchMinimised={false}
    isOpenAccessInAdvancedMode={false}
    onSearch={[Function]}
    onToggle={[Function]}
    searchQueryParams={Object {}}
  />
  <Snackbar
    autoHideDuration={5000}
    message=""
    open={false}
  />
</React.Fragment>
`;

exports[`SearchComponent should render simple search even if it says is advanced, if in header 1`] = `
<React.Fragment>
  <SimpleSearchComponent
    isInHeader={true}
    onInvalidSearch={[Function]}
    onSearch={[Function]}
    onToggle={[Function]}
    searchQueryParams={Object {}}
    showAdvancedSearchButton={false}
    showMobileSearchButton={false}
    showPrefixIcon={false}
    showSearchButton={false}
  />
  <Snackbar
    autoHideDuration={5000}
    message=""
    open={false}
  />
</React.Fragment>
`;

exports[`SearchComponent should render with a class "header" for use in AppBar 1`] = `
<React.Fragment>
  <SimpleSearchComponent
    isInHeader={true}
    onInvalidSearch={[Function]}
    onSearch={[Function]}
    onToggle={[Function]}
    searchQueryParams={Object {}}
    showAdvancedSearchButton={false}
    showMobileSearchButton={false}
    showPrefixIcon={false}
    showSearchButton={false}
  />
  <Snackbar
    autoHideDuration={5000}
    message=""
    open={false}
  />
</React.Fragment>
`;

exports[`SearchComponent should toggle search to minimised view of advanced search 1`] = `
<React.Fragment>
  <SimpleSearchComponent
    isInHeader={false}
    onInvalidSearch={[Function]}
    onSearch={[Function]}
    onToggle={[Function]}
    searchQueryParams={Object {}}
    showAdvancedSearchButton={false}
    showMobileSearchButton={false}
    showPrefixIcon={false}
    showSearchButton={false}
  />
  <Snackbar
    autoHideDuration={5000}
    message=""
    open={false}
  />
</React.Fragment>
`;

exports[`SearchComponent should toggle search to minimised view of advanced search 2`] = `
<React.Fragment>
  <AdvancedSearchComponent
    isAdvancedSearchMinimised={true}
    isOpenAccessInAdvancedMode={false}
    onSearch={[Function]}
    onToggle={[Function]}
    searchQueryParams={Object {}}
  />
  <Snackbar
    autoHideDuration={5000}
    message=""
    open={false}
  />
</React.Fragment>
`;
